--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<section>
 			<div class="weibo">
 				<div>
-					<a href="#"><h3>Spring MVC Demo</h3></a>
+					<a href="weibo/spring mvc demo.md"><h3>Spring MVC Demo</h3></a>
 	
 					<p>This automatic page generator is the easiest way to create
 						beautiful pages for all of your projects. Author your page content
