--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 				<a id="weibo" href="javascript:;">Weibo</a><br/>
 				<a id="spring" href="javascript:;">Spring web MVC</a><br/>
 				<a id="bootstrap" href="javascript:;">Bootstrap</a><br/>
+				<a id="bootstrap" href="javascript:;">JavaScript</a><br/>
+				<a id="bootstrap" href="javascript:;">UML</a><br/>
 			</p>
 		</header>
 		<section>
