--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</p>
 		</header>
 		<section>
-			<div class="weibo">
+			<div class="weibo" style="display: none;">
 				<div>
 					<a href="weibo/spring mvc demo.md"><h3>Spring MVC Demo</h3></a>
 	
