--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Sayi</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/leaves.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
@@ -57,6 +58,7 @@
 		</footer>
 	</div>
 	<script src="javascripts/scale.fix.js"></script>
+	<script src="javascripts/leaves.js"></script>
 	<script src="javascripts/jquery-1.8.0.min.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
