--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    
+    <style type="text/css">
+    	body{
+    		
+    	}
+    </style>
 </head>
 <body>
 	<div class="wrapper">
