--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ span{
 float: right;
 }
 section{
-background: url("img/backgroud.png") repeat;
+background: url("images/backgroud.png") repeat;
 }
 </style>
 </head>
