--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@ list-style: none;
 }
 ul li{
 margin-bottom: 5px;
-}
-h2{
 font-family: 'Comic Sans MS';
+font-size: 1.1em;
+}
+h3{
+font-family: 'Comic Sans MS';
+font-size: 1.4em;
 }
 ul{
 margin: 0;
@@ -59,31 +62,18 @@ background: url("images/backgroud.png") repeat;
 			
 		</header>
 		<section>
-			<h2>Contents</h2>
+			<h3>Contents</h3>
 			<ul>
 				<li><a id="weibo" href="javascript:;">Weibo</a></li>
-				<li><a id="spring" href="javascript:;">Spring web MVC</a></li>
-				<li><a id="bootstrap" href="javascript:;">Bootstrap</a></li>
-				<li><a id="bootstrap" href="javascript:;">JavaScript</a></li>
+				<li><a id="uml" href="javascript:;">UML</a></li>
+				<li><a id="java" href="javascript:;">Java</a></li>
 				<li>
 					<ul>
-						<li><a href="javascript:;">Jquery</a></li>
-						<li><a href="javascript:;">DOJO</a></li>
+						<li><a href="javascript:;">Thinking in Java</a></li>
+						<li><a href="javascript:;">JVM</a></li>
 					</ul>
 				</li>
-				<li><a id="bootstrap" href="javascript:;">UML</a></li>
-				<li><a id="weibo" href="javascript:;">Weibo</a></li>
-				<li><a id="spring" href="javascript:;">Spring web MVC</a></li>
-				<li><a id="bootstrap" href="javascript:;">Bootstrap</a></li>
-				<li><a id="bootstrap" href="javascript:;">Bootstrap</a></li>
-				<li><a id="bootstrap" href="javascript:;">JavaScript</a></li>
-				<li>
-					<ul>
-						<li><a href="javascript:;">Jquery</a></li>
-						<li><a href="javascript:;">DOJO</a></li>
-					</ul>
-				</li>
-				<li><a id="bootstrap" href="javascript:;">UML in eclipse for test and xml in eclipse for test</a></li>
+				<li><a id="git" href="javascript:;">Git</a></li>
 			</ul>
 		</section>
 	</div>
