--- a/index.html
+++ b/index.html
@@ -43,6 +43,22 @@ float: right;
 section{
 background: url("images/backgroud.png") repeat;
 }
+header{
+/* overflow-y: auto;
+border: 1px solid #d9d9d9;
+background-color: #fff;
+-webkit-border-radius: 10px;
+-moz-border-radius: 10px;
+border-radius: 10px;
+-webkit-box-shadow: 0 1px 6px rgba(0,0,0,0.25);
+-moz-box-shadow: 0 1px 6px rgba(0,0,0,0.25);
+box-shadow: 0 1px 6px rgba(0,0,0,0.25);
+-webkit-transition: left 0.5s ease;
+-moz-transition: left 0.5s ease;
+-o-transition: left 0.5s ease;
+transition: left 0.5s ease;
+z-index: 1060; */
+}
 </style>
 </head>
 <body>
