--- a/templete/atical-index.html
+++ b/templete/atical-index.html
@@ -87,19 +87,26 @@ z-index: 1060;
 }
 .contents{
 width:700px;
-margin:0 auto;
+margin-right: auto;
+margin-left: auto;
+}
+@media (max-width: 767px){
+.contents{
+width: auto;
+}
+.article{margin-top:60px}
 }
 ul.unstyled {
 padding: 0;
 margin-left: 0;
 list-style: none;
+text-align: left;
 }
 li {
 font-family: Georgia,"Times New Roman",Times,"Songti SC","SimSun",serif;
 position: relative;
 border-bottom: 1px dotted #d9d9d9;
 }
-
 li:hover {
 border-bottom: 1px dotted #a6a6a6;
 background-color: #eee;
@@ -182,25 +189,33 @@ filter: alpha(opacity=40);
 	<div class="contents">
 		<article>
 			<h2>青春</h2>
+			<pre><code>
+$ cd your_repo_root/repo_name
+$ git fetch origin
+$ git checkout gh-pages
+</code>
+			</pre>
 			<p>
 				为什么要有编码？
-首先大家需要明确的是在计算机里所有的数据都是字节的形式存储，处理的。我们需要这些字节来表示计算机里的信息。但是这些字节本身又是没有任何意义的，所以我们需要对这些字节赋予实际的意义。所以才会制定各种编码标准。
-
-编码模型
-首先需要明确的是存在两种编码模型
-
-简单字符集
-
-在这种编码模型里，一个字符集定义了这个字符集里包含什么字符，同时把每个字符如何对应成计算机里的比特也进行了定义。例如ASCII，在ASCII里直接定义了A -> 0100 0001。
-为什么要有编码？ 首先大家需要明确的是在计算机里所有的数据都是字节的形式存储，处理的。我们需要这些字节来表示计算机里的信息。但是这些字节本身又是没有任何意义的，所以我们需要对这些字节赋予实际的意义。所以才会制定各种编码标准。 编码模型 首先需要明确的是存在两种编码模型 简单字符集 在这种编码模型里，一个字符集定义了这个字符集里包含什么字符，同时把每个字符如何对应成计算机里的比特也进行了定义。例如ASCII，在ASCII里直接定义了A -> 0100 0001。
-为什么要有编码？ 首先大家需要明确的是在计算机里所有的数据都是字节的形式存储，处理的。我们需要这些字节来表示计算机里的信息。但是这些字节本身又是没有任何意义的，所以我们需要对这些字节赋予实际的意义。所以才会制定各种编码标准。 编码模型 首先需要明确的是存在两种编码模型 简单字符集 在这种编码模型里，一个字符集定义了这个字符集里包含什么字符，同时把每个字符如何对应成计算机里的比特也进行了定义。例如ASCII，在ASCII里直接定义了A -> 0100 0001。
-为什么要有编码？ 首先大家需要明确的是在计算机里所有的数据都是字节的形式存储，处理的。我们需要这些字节来表示计算机里的信息。但是这些字节本身又是没有任何意义的，所以我们需要对这些字节赋予实际的意义。所以才会制定各种编码标准。 编码模型 首先需要明确的是存在两种编码模型 简单字符集 在这种编码模型里，一个字符集定义了这个字符集里包含什么字符，同时把每个字符如何对应成计算机里的比特也进行了定义。例如ASCII，在ASCII里直接定义了A -> 0100 0001。
-为什么要有编码？ 首先大家需要明确的是在计算机里所有的数据都是字节的形式存储，处理的。我们需要这些字节来表示计算机里的信息。但是这些字节本身又是没有任何意义的，所以我们需要对这些字节赋予实际的意义。所以才会制定各种编码标准。 编码模型 首先需要明确的是存在两种编码模型 简单字符集 在这种编码模型里，一个字符集定义了这个字符集里包含什么字符，同时把每个字符如何对应成计算机里的比特也进行了定义。例如ASCII，在ASCII里直接定义了A -> 0100 0001。
-为什么要有编码？ 首先大家需要明确的是在计算机里所有的数据都是字节的形式存储，处理的。我们需要这些字节来表示计算机里的信息。但是这些字节本身又是没有任何意义的，所以我们需要对这些字节赋予实际的意义。所以才会制定各种编码标准。 编码模型 首先需要明确的是存在两种编码模型 简单字符集 在这种编码模型里，一个字符集定义了这个字符集里包含什么字符，同时把每个字符如何对应成计算机里的比特也进行了定义。例如ASCII，在ASCII里直接定义了A -> 0100 0001。
-为什么要有编码？ 首先大家需要明确的是在计算机里所有的数据都是字节的形式存储，处理的。我们需要这些字节来表示计算机里的信息。但是这些字节本身又是没有任何意义的，所以我们需要对这些字节赋予实际的意义。所以才会制定各种编码标准。 编码模型 首先需要明确的是存在两种编码模型 简单字符集 在这种编码模型里，一个字符集定义了这个字符集里包含什么字符，同时把每个字符如何对应成计算机里的比特也进行了定义。例如ASCII，在ASCII里直接定义了A -> 0100 0001。
-为什么要有编码？ 首先大家需要明确的是在计算机里所有的数据都是字节的形式存储，处理的。我们需要这些字节来表示计算机里的信息。但是这些字节本身又是没有任何意义的，所以我们需要对这些字节赋予实际的意义。所以才会制定各种编码标准。 编码模型 首先需要明确的是存在两种编码模型 简单字符集 在这种编码模型里，一个字符集定义了这个字符集里包含什么字符，同时把每个字符如何对应成计算机里的比特也进行了定义。例如ASCII，在ASCII里直接定义了A -> 0100 0001。
-为什么要有编码？ 首先大家需要明确的是在计算机里所有的数据都是字节的形式存储，处理的。我们需要这些字节来表示计算机里的信息。但是这些字节本身又是没有任何意义的，所以我们需要对这些字节赋予实际的意义。所以才会制定各种编码标准。 编码模型 首先需要明确的是存在两种编码模型 简单字符集 在这种编码模型里，一个字符集定义了这个字符集里包含什么字符，同时把每个字符如何对应成计算机里的比特也进行了定义。例如ASCII，在ASCII里直接定义了A -> 0100 0001。
-为什么要有编码？ 首先大家需要明确的是在计算机里所有的数据都是字节的形式存储，处理的。我们需要这些字节来表示计算机里的信息。但是这些字节本身又是没有任何意义的，所以我们需要对这些字节赋予实际的意义。所以才会制定各种编码标准。 编码模型 首先需要明确的是存在两种编码模型 简单字符集 在这种编码模型里，一个字符集定义了这个字符集里包含什么字符，同时把每个字符如何对应成计算机里的比特也进行了定义。例如ASCII，在ASCII里直接定义了A -> 0100 0001。
+				<pre><code>
+$ cd your_repo_root/repo_name
+$ git fetch origin
+$ git checkout gh-pages
+</code>
+			</pre>
+					首先大家需要明确的是在计算机里所有的数据都是字节的形式存储，处理的。我们需要这些字节来表示计算机里的信息。但是这些字节本身又是没有任何意义的，所以我们需要对这些字节赋予实际的意义。所以才会制定各种编码标准。
+					编码模型首先需要明确的是存在两种编码模型简单字符集在这种编码模型里，一个字符集定义了这个字符集里包含什么字符，同时把每个字符如何对应成计算机里的比特也进行了定义。例如ASCII，在ASCII里直接定义了A -> 0100 0001。
+					为什么要有编码？ 首先大家需要明确的是在计算机里所有的数据都是字节的形式存储，处理的。我们需要这些字节来表示计算机里的信息。但是这些字节本身又是没有任何意义的，所以我们需要对这些字节赋予实际的意义。所以才会制定各种编码标准。 编码模型 首先需要明确的是存在两种编码模型 简单字符集 在这种编码模型里，一个字符集定义了这个字符集里包含什么字符，同时把每个字符如何对应成计算机里的比特也进行了定义。例如ASCII，在ASCII里直接定义了A -> 0100 0001。
+					为什么要有编码？ 首先大家需要明确的是在计算机里所有的数据都是字节的形式存储，处理的。我们需要这些字节来表示计算机里的信息。但是这些字节本身又是没有任何意义的，所以我们需要对这些字节赋予实际的意义。所以才会制定各种编码标准。 编码模型 首先需要明确的是存在两种编码模型 简单字符集 在这种编码模型里，一个字符集定义了这个字符集里包含什么字符，同时把每个字符如何对应成计算机里的比特也进行了定义。例如ASCII，在ASCII里直接定义了A -> 0100 0001。
+					为什么要有编码？ 首先大家需要明确的是在计算机里所有的数据都是字节的形式存储，处理的。我们需要这些字节来表示计算机里的信息。但是这些字节本身又是没有任何意义的，所以我们需要对这些字节赋予实际的意义。所以才会制定各种编码标准。 编码模型 首先需要明确的是存在两种编码模型 简单字符集 在这种编码模型里，一个字符集定义了这个字符集里包含什么字符，同时把每个字符如何对应成计算机里的比特也进行了定义。例如ASCII，在ASCII里直接定义了A -> 0100 0001。
+					<blockquote>
+					为什么要有编码？ 首先大家需要明确的是在计算机里所有的数据都是字节的形式存储，处理的。我们需要这些字节来表示计算机里的信息。但是这些字节本身又是没有任何意义的，所以我们需要对这些字节赋予实际的意义。所以才会制定各种编码标准。 编码模型 首先需要明确的是存在两种编码模型 简单字符集 在这种编码模型里，一个字符集定义了这个字符集里包含什么字符，同时把每个字符如何对应成计算机里的比特也进行了定义。例如ASCII，在ASCII里直接定义了A -> 0100 0001。
+					</blockquote>
+					为什么要有编码？ 首先大家需要明确的是在计算机里所有的数据都是字节的形式存储，处理的。我们需要这些字节来表示计算机里的信息。但是这些字节本身又是没有任何意义的，所以我们需要对这些字节赋予实际的意义。所以才会制定各种编码标准。 编码模型 首先需要明确的是存在两种编码模型 简单字符集 在这种编码模型里，一个字符集定义了这个字符集里包含什么字符，同时把每个字符如何对应成计算机里的比特也进行了定义。例如ASCII，在ASCII里直接定义了A -> 0100 0001。
+					为什么要有编码？ 首先大家需要明确的是在计算机里所有的数据都是字节的形式存储，处理的。我们需要这些字节来表示计算机里的信息。但是这些字节本身又是没有任何意义的，所以我们需要对这些字节赋予实际的意义。所以才会制定各种编码标准。 编码模型 首先需要明确的是存在两种编码模型 简单字符集 在这种编码模型里，一个字符集定义了这个字符集里包含什么字符，同时把每个字符如何对应成计算机里的比特也进行了定义。例如ASCII，在ASCII里直接定义了A -> 0100 0001。
+					为什么要有编码？ 首先大家需要明确的是在计算机里所有的数据都是字节的形式存储，处理的。我们需要这些字节来表示计算机里的信息。但是这些字节本身又是没有任何意义的，所以我们需要对这些字节赋予实际的意义。所以才会制定各种编码标准。 编码模型 首先需要明确的是存在两种编码模型 简单字符集 在这种编码模型里，一个字符集定义了这个字符集里包含什么字符，同时把每个字符如何对应成计算机里的比特也进行了定义。例如ASCII，在ASCII里直接定义了A -> 0100 0001。
+					为什么要有编码？ 首先大家需要明确的是在计算机里所有的数据都是字节的形式存储，处理的。我们需要这些字节来表示计算机里的信息。但是这些字节本身又是没有任何意义的，所以我们需要对这些字节赋予实际的意义。所以才会制定各种编码标准。 编码模型 首先需要明确的是存在两种编码模型 简单字符集 在这种编码模型里，一个字符集定义了这个字符集里包含什么字符，同时把每个字符如何对应成计算机里的比特也进行了定义。例如ASCII，在ASCII里直接定义了A -> 0100 0001。
+					为什么要有编码？ 首先大家需要明确的是在计算机里所有的数据都是字节的形式存储，处理的。我们需要这些字节来表示计算机里的信息。但是这些字节本身又是没有任何意义的，所以我们需要对这些字节赋予实际的意义。所以才会制定各种编码标准。 编码模型 首先需要明确的是存在两种编码模型 简单字符集 在这种编码模型里，一个字符集定义了这个字符集里包含什么字符，同时把每个字符如何对应成计算机里的比特也进行了定义。例如ASCII，在ASCII里直接定义了A -> 0100 0001。
 			</p>
 		</article>
 	</div>
