--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@ z-index: 1060; */
 		<section>
 			<h3>Contents</h3>
 			<ul>
-				<li><a id="weibo" href="javascript:;">Weibo</a></li>
-				<li><a id="uml" href="javascript:;">UML</a></li>
-				<li><a id="java" href="javascript:;">Java</a></li>
+				<li><a href="javascript:;">Weibo</a></li>
+				<li><a href="javascript:;">UML</a></li>
+				<li><a href="javascript:;">Java</a></li>
 				<li>
 					<ul>
 						<li><a href="javascript:;">Thinking in Java</a></li>
 						<li><a href="javascript:;">JVM</a></li>
 					</ul>
 				</li>
-				<li><a id="git" href="javascript:;">Git</a></li>
+				<li><a href="javascript:;">Git</a></li>
 			</ul>
 		</section>
 	</div>
