--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ z-index: 1060; */
 		<section>
 			<h3>Contents</h3>
 			<ul>
-				<li><a href="javascript:;">Weibo</a></li>
+				<li><a href="article/weibo/index.html">Weibo</a></li>
 				<li><a href="javascript:;">UML</a></li>
 				<li><a href="javascript:;">Java</a></li>
 				<li>
