--- a/article/weibo/index.html
+++ b/article/weibo/index.html
@@ -8,11 +8,11 @@
 <link rel="stylesheet" href="../../stylesheets/styles.css">
 <link rel="stylesheet" href="../../stylesheets/font-awesome.min.css">
 <link rel="stylesheet" href="../../stylesheets/pygment_trac.css">
-<title>article</title>
+<title>Weibo</title>
 </head>
 <body data-spy="scroll" data-target="#leftNav">
 	<div class="right-corner-nav">
-  <a href="../index.html" class="notebook">
+  <a href="../../index.html" class="notebook">
     <i class="icon-home"></i> 
 </a></div>
 	
@@ -149,6 +149,42 @@
 不带走一片云彩。</blockquote>
 		<h3>我是祖国的花朵。</h3>
 		</div>
+		<article id="last">
+			<h1>如何设计一个牛牛的产品</h1>
+			
+			<div><img src="../../images/sayiadll040901.jpg"></div>
+			<blockquote>
+			<h2>如何设计一个牛牛的产品</h2>
+轻轻的我走了，<br/>
+正如我轻轻的来；<br/>
+我轻轻的招手，<br/>
+作别西天的云彩。<br/>
+那河畔的金柳，<br/>
+是夕阳中的新娘；<br/>
+波光里的艳影，<br/>
+在我的心头荡漾。<br/>
+软泥上的青荇，<br/>
+油油的在水底招摇；<br/>
+在康河的柔波里，<br/>
+我甘心做一条水草。<br/>
+那榆阴下的一潭，<br/>
+不是清泉，是天上虹；<br/>
+揉碎在浮藻间，<br/>
+沉淀着彩虹似的梦。<br/>
+寻梦？撑一支长篙，<br/>
+向青草更青处漫溯；<br/>
+满载一船星辉，<br/>
+在星辉斑斓里放歌。<br/>
+但我不能放歌，<br/>
+悄悄是别离的笙箫；<br/>
+夏虫也为我沉默，<br/>
+沉默是今晚的康桥！<br/>
+悄悄的我走了，<br/>
+正如我悄悄的来；<br/>
+我挥一挥衣袖，<br/>
+不带走一片云彩。</blockquote>
+		<h3>我是祖国的花朵。</h3>
+		</article>
 	</div>
 	<script src="../../javascripts/scale.fix.js"></script>
 	<script src="../../javascripts/jquery-1.8.0.min.js"></script>
