--- a/article/weibo/index.html
+++ b/article/weibo/index.html
@@ -113,7 +113,7 @@
 不带走一片云彩。</blockquote>
 		<h3>我是祖国的花朵。</h3>
 		</article>
-		<div id="weibo">
+		<article id="weibo">
 			<h1>Weibo的产生</h1>
 			
 			<div><img src="../../images/sayiadll040901.jpg"></div>
@@ -148,7 +148,7 @@
 我挥一挥衣袖，<br/>
 不带走一片云彩。</blockquote>
 		<h3>我是祖国的花朵。</h3>
-		</div>
+		</article>
 		<article id="last">
 			<h1>如何设计一个牛牛的产品</h1>
 			
