--- a/index.html
+++ b/index.html
@@ -72,15 +72,14 @@ z-index: 1060; */
 			<h3>Contents</h3>
 			<ul>
 				<li><a href="article/weibo/index.html">Weibo</a></li>
-				<li><a href="javascript:;">UML</a></li>
-				<li><a href="javascript:;">Java</a></li>
-				<li>
+				<li><a href="javascript:;">MYSQL</a></li>
+				<!-- <li>
 					<ul>
 						<li><a href="javascript:;">Thinking in Java</a></li>
 						<li><a href="javascript:;">JVM</a></li>
 					</ul>
 				</li>
-				<li><a href="javascript:;">Git</a></li>
+				<li><a href="javascript:;">Git</a></li> -->
 			</ul>
 		</section>
 	</div>
