--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ z-index: 1060; */
 			<h3>Contents</h3>
 			<ul>
 				<li><a href="article/weibo/index.html">Weibo</a></li>
-				<li><a href="javascript:;">MYSQL</a></li>
+				<li><a href="article/mysql/index.html">MYSQL</a></li>
 				<!-- <li>
 					<ul>
 						<li><a href="javascript:;">Thinking in Java</a></li>
