--- a/article/mysql/index.html
+++ b/article/mysql/index.html
@@ -26,14 +26,14 @@
         <h1>Weibo</h1>
         <ul class="unstyled nav">
           <li class="show-note-link">
-          <a href="#basic">引言<i class="icon-chevron-right"></i></a>
+          <a href="#basic">Mysql Basic<i class="icon-chevron-right"></i></a>
           </li>
           
       </ul>
     </div>
     <div class="posts">
       <article id="basic">
-      	<h1>MYSQL</h1>
+      	<h1>MYSQL BASIC</h1>
 
 <p><img src="mysql.png" alt="" title="" /></p>
 
