--- a/article/mysql/index.html
+++ b/article/mysql/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="../../stylesheets/styles.css">
 <link rel="stylesheet" href="../../stylesheets/font-awesome.min.css">
 <link rel="stylesheet" href="../../stylesheets/pygment_trac.css">
-<title>Weibo</title>
+<title>Mysql</title>
 </head>
 <body data-spy="scroll" data-target="#leftNav">
     <div class="right-corner-nav">
@@ -23,7 +23,7 @@
     <div id="leftNav" class="leftpanel contents contents-active">
         <div class="close"><i class="icon-remove"></i></div>
         
-        <h1>Weibo</h1>
+        <h1>Mysql</h1>
         <ul class="unstyled nav">
           <li class="show-note-link">
           <a href="#basic">Mysql Basic<i class="icon-chevron-right"></i></a>
