mysql create user

--- a/article/mysql/index.html
+++ b/article/mysql/index.html
@@ -337,7 +337,12 @@ Enter password: ********
 <p>1.首先，使用MySQL程序以MySQL root用户来连接服务器,然后设置帐号和授权：</p>
 
 <pre><code>mysql&gt; GRANT ALL PRIVILEGES ON *.* TO 'monty'@'%'
-    -&gt;     IDENTIFIED BY 'some_pass' WITH GRANT OPTION;
+    -&gt;     IDENTIFIED BY 'some_pass'  IDENTIFIED BY 'some_pass' [WITH with_option];
+with_option:
+| MAX_QUERIES_PER_HOUR count
+| MAX_UPDATES_PER_HOUR count
+| MAX_CONNECTIONS_PER_HOUR count
+| MAX_USER_CONNECTIONS count
 </code></pre>
 
 <p>2.除了GRANT，你可以直接用INSERT语句创建相同的账户，然后使用FLUSH PRIVILEGES告诉服务器重载授权表：
