mysql create user

--- a/article/mysql/index.html
+++ b/article/mysql/index.html
@@ -330,9 +330,11 @@ Enter password: ********
 
 <h4>向MySQL增加新用户账户</h4>
 
-<p>可以用两种方式创建MySQL账户：
-* 使用GRANT语句
-* 直接操作MySQL授权表</p>
+<p>可以用两种方式创建MySQL账户：</p>
+<ul>
+<li>使用GRANT语句</li>
+<li>直接操作MySQL授权表</li>
+</ul>
 
 <p>1.首先，使用MySQL程序以MySQL root用户来连接服务器,然后设置帐号和授权：</p>
 
