--- a/article/mysql/index.html
+++ b/article/mysql/index.html
@@ -23,7 +23,7 @@
     <div id="leftNav" class="leftpanel contents contents-active">
         <div class="close"><i class="icon-remove"></i></div>
         
-        <h1>Mysql</h1>
+        <h1>Mysql Note</h1>
         <ul class="unstyled nav">
           <li class="show-note-link">
           <a href="#basic">Mysql Basic<i class="icon-chevron-right"></i></a>
