--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ float: right;
 			<li data-show="introduce" class="selected" ></li>
 			<li data-show="contents"></li>
 		</ul>
-	<div class="wrapper">
+	<div class="wrapper" style="padding-top:20px;">
 		<div  id="introduce" class="choice">
 			<div class="qingchun">
 			<img src="images/qingchun.jpg" alt="">
