--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@ float: right;
 		<section id="contents" style="display:none;" class="choice">
 			<h3>Contents 目录</h3>
 			<ul>
-				<li><a href="article/mysql/index.html">单点登录---CAS</a></li>
+				<li><a href="javascript:;">单点登录---CAS</a></li>
 				<li>Lightweight Directory Access Protocol</li>
 				<li>
 					<ul>
-						<li><a href="article/weibo/index.html">Apache DS</a></li>
-						<li><a href="article/weibo/index.html">Spring Ldap 参考</a></li>
+						<li><a href="javascript:;">Apache DS</a></li>
+						<li><a href="javascript:;">Spring Ldap 参考</a></li>
 					</ul>
 				</li>
 				<li>项目构建</li>
 				<li>
 					<ul>
-						<li><a href="article/weibo/index.html">Ant</a></li>
-						<li><a href="article/weibo/index.html">Maven</a></li>
+						<li><a href="javascript:;">Ant</a></li>
+						<li><a href="javascript:;">Maven</a></li>
 					</ul>
 				</li>
 				<li>前端技术</li>
