--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@ float: right;
 						<li><a href="javascript:;">Spring Ldap 参考</a></li>
 					</ul>
 				</li>
+				<li><a href="javascript:;">Spring 3</a></li> 
+				<li>
+					<ul>
+						<li><a href="article/spring/aop-pointcut-bean.html">AOP:AspectJ pointcut designators切入点指示符---bean</a></li>
+					</ul>
+				</li> 
 				<li>项目构建</li>
 				<li>
 					<ul>
@@ -93,7 +99,6 @@ float: right;
 					</ul>
 				</li>
 				<li><a href="article/mysql/index.html">MYSQL 记录</a></li>
-				<li><a href="javascript:;">Git</a></li> 
 				<li><a href="javascript:;">Python</a></li> 
 			</ul>
 		</section>
