--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ float: right;
 						<li><a href="javascript:;">Spring Ldap 参考</a></li>
 					</ul>
 				</li>
-				<li><a href="javascript:;">Spring 3</a></li> 
+				<li>Spring 3</li> 
 				<li>
 					<ul>
 						<li><a href="article/spring/aop-pointcut-bean.html">AOP:AspectJ pointcut designators切入点指示符---bean</a></li>
@@ -87,7 +87,7 @@ float: right;
 				<li>项目构建</li>
 				<li>
 					<ul>
-						<li><a href="javascript:;">Ant</a></li>
+						<li><a href="jarticle/ant/ant.md">Ant</a></li>
 						<li><a href="javascript:;">Maven</a></li>
 					</ul>
 				</li>
