--- a/index.html
+++ b/index.html
@@ -70,36 +70,98 @@ float: right;
 		<section id="contents" style="display:none;" class="choice">
 			<h3>Contents 目录</h3>
 			<ul>
-				<li><a href="javascript:;">单点登录---CAS</a></li>
-				<li>Lightweight Directory Access Protocol</li>
-				<li>
+				<li>Central Authentication Service----单点登录
 					<ul>
-						<li><a href="javascript:;">Apache DS</a></li>
+						<li><a href="javascript:;">Single sign-on (SSO)</a></li>
+						<li><a href="javascript:;">JASIG CAS简介及CAS Protocol介绍</a></li>
+						<li><a href="javascript:;">CAS server</a></li>
+						<li><a href="javascript:;">CAS client</a></li>
+					</ul>
+				</li>
+				<li>Lightweight Directory Access Protocol
+					<ul>
+						<li><a href="javascript:;">Apache DS以及浏览管理工具</a></li>
+						<li><a href="javascript:;">Apache Directory LDAP API</a></li
 						<li><a href="javascript:;">Spring Ldap 参考</a></li>
 					</ul>
 				</li>
-				<li>Spring 3</li> 
-				<li>
+				<li>The Java Program Language 
 					<ul>
-						<li><a href="article/spring/aop-pointcut-bean.html">AOP:AspectJ pointcut designators切入点指示符---bean</a></li>
+						<li><a href="javascript:;">Java Mail</a></li>
+						<li><a href="javascript:;">Json and XML</a></li>
+						<li><a href="javascript:;">Junit 单元测试</a></li>
+						<li><a href="javascript:;">任务调度框架Quartz</a></li>
+						<li><a href="javascript:;">缓存框架Ehcache</a></li>
+					</ul>
+				</li>
+				<li>Java Virtual Machine(JVM) </li>
+				<li>Spring 3
+					<ul>
+						<li><a href="javascript:;">Spring 入门示例</a></li>
+						<li><a href="javascript:;">Spring Annotation(@Valid、@ModelAttribute、@PathVariable)</a></li>
+						<li><a href="javascript:;">Spring JDBC</a></li>
+						<li><a href="javascript:;">Spring Transactional</a></li>
+						<li><a href="javascript:;">Spring Exception</a></li>
+						<li><a href="javascript:;">Spring international</a></li>
+						<li><a href="javascript:;">Spring File Upload</a></li>
+						<li><a href="javascript:;">Spring Theme</a></li>
+						<li><a href="javascript:;">Spring Validation</a></li>
+						<li><a href="javascript:;">Spring Model、Request、Response、Session、Flash attribute</a></li>
+						<li><a href="article/spring/aop-pointcut-bean.html">AOP：AspectJ pointcut designators---bean</a></li>
+						<li><a href="javascript:;">Spring HttpMessageConvert</a></li>
 					</ul>
 				</li> 
-				<li>项目构建</li>
-				<li>
+				<li>Log 日志 
 					<ul>
-						<li><a href="jarticle/ant/ant.md">Ant</a></li>
+						<li><a href="article/ant/ant.md">Log4J</a></li>
+						<li><a href="javascript:;">SLF4J</a></li>
+					</ul>
+				</li>
+				<li>前端技术
+					<ul>
+						<li><a href="javascript:;">Bootstrap</a></li>
+						<li><a href="javascript:;">Jquery及其插件Plugin</a></li>
+						<li><a href="javascript:;">client validation</a></li>
+						<li><a href="javascript:;">模块化的SeaJs(玉伯)</a></li>
+					</ul>
+				</li>
+				<li>服务器
+					<ul>
+						<li><a href="javascript:;">Nginx</a></li>
+						<li><a href="javascript:;">Tomcat</a></li>
+						<li><a href="javascript:;">IBM WebSphere Application Server</a></li>
+					</ul>
+				</li>
+				<li>数据库
+					<ul>
+						<li><a href="javascript:;">连接池C3P0、Druid及实现原理</a></li>
+						<li><a href="article/mysql/index.html">MYSQL 记录</a></li>
+						<li><a href="javascript:;">DB2 初使用</a></li>
+						<li><a href="javascript:;">Oracle</a></li>
+					</ul>
+				</li>
+				<li>Web 记
+					<ul>
+						<li><a href="javascript:;">Restful Service</a></li>
+						<li><a href="javascript:;">Markdown</a></li>
+						<li><a href="javascript:;">Sublime Text</a></li>
+					</ul>
+				</li>
+				<li>项目构建
+					<ul>
+						<li><a href="article/ant/ant.md">Ant的使用</a></li>
 						<li><a href="javascript:;">Maven</a></li>
 					</ul>
 				</li>
-				<li>前端技术</li>
-				<li>
+				<li class="python">
+					<h3>Python--Life is short, you need Python</h3>
 					<ul>
-						<li><a href="javascript:;">Jquery及其插件Plugin</a></li>
-						<li><a href="javascript:;">玉伯之SeaJs</a></li>
+						<li><a href="javascript:;">Python语言基础</a></li>
+						<li><a href="javascript:;">Python Library 常见库使用</a></li>
+						<li><a href="javascript:;">PyQt4 GUI开发</a></li>
+						<li><a href="javascript:;">豆瓣日记桌面GUI开发</a></li>
 					</ul>
 				</li>
-				<li><a href="article/mysql/index.html">MYSQL 记录</a></li>
-				<li><a href="javascript:;">Python</a></li> 
 			</ul>
 		</section>
 	</div>
@@ -109,7 +171,7 @@ float: right;
 	
 	<script type="text/javascript">
 		$(document).ready(function() {
-			$('html').bind('mousewheel', function(event, delta, deltaX, deltaY) {
+			/*$('html').bind('mousewheel', function(event, delta, deltaX, deltaY) {
 			    //console.log(delta, deltaX, deltaY);
 			    if (delta > 0){
 			    	console.log('up');
@@ -126,7 +188,7 @@ float: right;
 			    	$(".choice-nav li[data-show=contents]").addClass('selected');
 			    	
 			    }
-			});
+			});*/
 
 			$(".choice-nav li").click(function(){
 				if (!$(this).hasClass('selected')){
