--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ float: right;
 				<li>Java Virtual Machine(JVM) </li>
 				<li>Spring 3
 					<ul>
-						<li><a href="article/spring/a-small-springMVC-example.md">Spring MVC 3入门示例</a></li>
+						<li><a href="article/spring/a-small-springMVC-example.html">Spring MVC 3入门示例</a></li>
 						<li><a href="javascript:;">Spring Annotation(@Valid、@ModelAttribute、@PathVariable)</a></li>
 						<li><a href="javascript:;">Spring JDBC</a></li>
 						<li><a href="javascript:;">Spring Transactional</a></li>
