--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ float: right;
 				</li>
 				<li>项目构建
 					<ul>
-						<li><a href="article/ant/ant.md">Ant的使用</a></li>
+						<li><a href="article/ant/ant.html">Ant的使用</a></li>
 						<li><a href="javascript:;">Maven</a></li>
 					</ul>
 				</li>
