--- a/article/ant/ant.html
+++ b/article/ant/ant.html
@@ -7,7 +7,7 @@
     content="width=device-width, initial-scale=1, user-scalable=no">
 <link rel="stylesheet" href="../../stylesheets/styles.css">
 <link rel="stylesheet" href="../../stylesheets/page.css">
-<title>Spring MVC 3 入门示例</title>
+<title>Ant 使用</title>
 </head>
 <body>
 <article>
